--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div id="board" class="board">
+    <div class="board">
 
     </div>
     <script src="sketch.js"></script>
