--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <div class="board">
-
+    <div class="board" id="board">
+        <!-- <div class="tile"></div> -->
     </div>
     <script src="sketch.js"></script>
 </body>
