Fix rendering (I think)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Rainblur Landing Page Template: Tailwind Toolbox</title>
+    <title>oriont.net | Get Solana!</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
 
@@ -28,6 +28,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap" rel="stylesheet">
+
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
 
   <body class="text-indigo-400 m-6 bg-cover bg-fixed" style="background-image: url('header.png');">
@@ -54,6 +56,8 @@
 
 
     </div>
-    <script src="sketch.js"></script>
+    <script src="src/rendering.js"></script>
+    <script src="src/game.js"></script>
+    <script src="src/index.js"></script>
   </body>
 </html>
