--- a/index.html
+++ b/index.html
@@ -37,19 +37,20 @@
       <!--Main-->
       <div class="container w-full md:max-w-3xl mx-auto pt-20 text-center">
         <!-- Text -->
-        <div class="w-full justify-center lg:items-start overflow-y-hidden">
-          <h1 class="my-4 text-3xl md:text-5xl text-white opacity-75 font-bold leading-tight text-center">
+        <div class="w-full justify-center lg:items-start">
+          <h1 class="my-4 text-5xl text-white opacity-75 font-bold leading-tight text-center">
             <span class="bg-clip-text text-transparent bg-gradient-to-r from-green-400 via-pink-500 to-purple-500">
               Get Solana!
             </span>
             oriont.net
           </h1>
-          <p class="leading-normal text-base md:text-2xl mb-8 text-center">
+          <p class="leading-normal text-base text-2xl mb-8 text-center">
             Join the tiles to get Solana.
           </p>
-          <div class="flex flex-wrap space-x-10 justify-center">
-            <p class="text-4xl md:text-5xl text-white opacity-75 font-bold leading-tight text-center">Score: 100</p>
-            <button id="restart" type="button" class="text-white bg-gradient-to-r from-purple-500 via-purple-600 to-purple-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-purple-300 dark:focus:ring-purple-800 shadow-lg  font-medium rounded-lg text-lg px-5 py-2.5 text-center mb-10">Restart</button>
+          <div class="max-w-md flex flex-wrap justify-center mx-auto mb-10">
+            <p class="flex-3 text-5xl text-white opacity-75 font-bold leading-tight text-center mr-3">Score: </p>
+            <span id="score" class="flex-1 text-5xl text-white opacity-75 font-bold leading-tight text-left">0</span>
+            <button id="restart" type="button" class="flex-4 text-white bg-gradient-to-r from-purple-500 via-purple-600 to-purple-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-purple-300 dark:focus:ring-purple-800 shadow-lg font-medium rounded-lg text-lg px-5 py-2.5 text-center">Restart</button>
           </div>
         </div>
 
@@ -59,24 +60,24 @@
         <!-- Lost/Won -->
         <div class="relative">
           <div id="losttext" class="absolute w-full justify-center lg:items-start overflow-y-hidden mt-10" style="opacity: 0;">
-            <h1 class="my-4 text-3xl md:text-5xl text-white opacity-75 font-bold leading-tight text-center">
+            <h1 class="my-4 text-5xl text-white opacity-75 font-bold leading-tight text-center">
               <span class="bg-clip-text text-transparent bg-gradient-to-r from-red-500 via-pink-500 to-yellow-500">
                 You Lost!
               </span>
               Play Again?
             </h1>
-            <p class="leading-normal text-base md:text-2xl mb-8 text-center">
+            <p class="leading-normal text-base text-2xl mb-8 text-center">
               Or add your name to the leaderboard!
             </p>
           </div>
           <div id="windiv" class="absolute w-full justify-center lg:items-start overflow-y-hidden mt-10" style="opacity: 0;">
-            <h1 class="my-4 text-3xl md:text-5xl text-white opacity-75 font-bold leading-tight text-center">
+            <h1 class="my-4 text-5xl text-white opacity-75 font-bold leading-tight text-center">
               <span class="bg-clip-text text-transparent bg-gradient-to-r from-yellow-500 via-green-500 to-blue-500">
                 You Win!
               </span>
               Keep Playing?
             </h1>
-            <p class="leading-normal text-base md:text-2xl mb-8 text-center">
+            <p class="leading-normal text-base text-2xl mb-8 text-center">
               Or add your name to the leaderboard!
             </p>
           </div>
